--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower cache clean && bower install"
   },
   "author": "Rich Ruais",
   "license": "ISC",
   "dependencies": {
+    "bower": "latest",
     "bcrypt": "^1.0.2",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
