--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.14.2",
     "express-validator": "^3.1.2",
+    "fs-extra": "^2.1.2",
     "json-web-token": "^2.1.3",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.21",
